myapp.tf
# app

data "template_file" "myapp-task-definition-template" {
  template               = "${file("templates/app.json.tpl")}"
 vars {
   #ELB_DNS_URL = "${replace("${aws_elb.myapp-elb.dns_name}", "https://", "")}"
   ELB_DNS_URL = "${join(":", list("${aws_elb.myapp-elb.dns_name}", "8080"))}"	
   #Name = "${join("-",list(var.environment-name, "frontend"))}"
 }

}

resource "aws_ecs_task_definition" "myapp-task-definition" {
  family                = "myapp"
  container_definitions = "${data.template_file.myapp-task-definition-template.rendered}"
  network_mode="bridge"	
}

resource "aws_elb" "myapp-elb" {
  name = "myapp-elb"


listener = [
	{ 
	   instance_port = 3000 
           instance_protocol = "http" 
           lb_port = 80 
           lb_protocol = "http"
        },
        { instance_port = 4000 
          instance_protocol = "http" 
          lb_port = 8080 
	  lb_protocol = "http" }
	]

	  health_check {
	    healthy_threshold = 3
	    unhealthy_threshold = 3
	    timeout = 30
	    target = "HTTP:3000/"
	    interval = 60
	  }

  cross_zone_load_balancing = true
  idle_timeout = 400
  connection_draining = true
  connection_draining_timeout = 400

  subnets = ["${aws_subnet.main-public-1.id}","${aws_subnet.main-public-2.id}"]
  security_groups = ["${aws_security_group.myapp-elb-securitygroup.id}"]

  tags {
    Name = "myapp-elb"
  }
}

resource "aws_ecs_service" "myapp-service" {
  name = "myapp"
  cluster = "${aws_ecs_cluster.example-cluster.id}"
  task_definition = "${aws_ecs_task_definition.myapp-task-definition.arn}"
  desired_count = 1
  iam_role = "${aws_iam_role.ecs-service-role.arn}"
  depends_on = ["aws_iam_policy_attachment.ecs-service-attach1"]

  load_balancer {
    elb_name = "${aws_elb.myapp-elb.name}"
    container_name = "hello-world"
    container_port = 8080
  }
  lifecycle { ignore_changes = ["task_definition"] }
}
